Fix awkward wrapping between break points.

--- a/templates/cakephp/resources/css/responsive.css
+++ b/templates/cakephp/resources/css/responsive.css
@@ -229,7 +229,7 @@
 @media (min-width: 992px) and (max-width: 1199px) {
 /*CSS LIDO EM DISPOSITIVOS ATÉ 1199 PX DE LARGURA*/
     .menu > li > a {
-        padding: 25px 35px;
+        padding: 25px 20px;
     }
 
     .menu-fixed .menu > li > a {
